<resources>
    <string name="app_name">Tourguide</string>
    <string name="access_token">pk.eyJ1Ijoia3JldHpzY2htYXJ2aW4iLCJhIjoiY2pjbHFwZnl4MGFmcjJ3bnZtcXV6M2M3cSJ9.oPwCChtV9rMOTKEB9FLp3Q</string>
    <string name="user_location_permission_not_granted">Erlaubnis nicht erteilt</string>
    <string name="title_activity_settings">Settings</string>
    <string name="name">Name</string>
    <string name="desc">Beschreibung</string>
    <string name="lat">Latitude</string>
    <string name="lng">Longitude</string>
    <string name="get_pos_button">Letzte Position</string>
    <string name="choose_pos_button">Wähle Position</string>
    <string name="commit_button">Absenden</string>
    <string name="start_nav_button_name">Starte die Route</string>
    <string name="switch_button_name">Nahe POI</string>
    <string name="title_activity_poi_list">POIs in der Nähe</string>
    <string name="title_activity_commit_poi">POI hinzufügen</string>

</resources>