<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="pinguparty.de.tourguide.CommitPoiActivity"
    tools:showIn="@layout/activity_commit_poi">

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_row="0"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text" />

    <EditText
        android:id="@+id/descEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_row="1"
        android:ems="10"
        android:hint="@string/desc"
        android:inputType="textMultiLine"
        android:minLines="3"
        android:singleLine="false" />

    <EditText
        android:id="@+id/latEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_row="2"
        android:ems="10"
        android:hint="@string/lat"
        android:inputType="number" />

    <EditText
        android:id="@+id/longEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_row="3"
        android:ems="10"
        android:hint="@string/lng"
        android:inputType="number" />

    <Button
        android:id="@+id/getPosButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_row="2"
        android:text="@string/get_pos_button"
        app:layout_constraintStart_toEndOf="@+id/latEditText"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/choosePosButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_row="3"
        android:text="@string/choose_pos_button"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/longEditText"
        app:layout_constraintTop_toBottomOf="@+id/getPosButton" />

    <Button
        android:id="@+id/commitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_row="4"
        android:text="@string/commit_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</GridLayout>
